8264562: assert(verify_field_bit(1)) failed: Attempting to write an uninitialized event field: type

Reviewed-by: phh