hotspot/src/share/vm/gc_implementation/g1/g1HeapRegionEventSender.cpp
@@ -33,7 +33,7 @@ public:
   bool doHeapRegion(HeapRegion* r) {
     EventG1HeapRegionInformation evt;
     evt.set_index(r->hrm_index());
-    // XXX TODO evt.set_type(r->get_trace_type());
+    evt.set_type(r->get_trace_type());
     evt.set_start((uintptr_t)r->bottom());
     evt.set_used(r->used());
     evt.commit();
